# LeadBoostAI

./: .env.messaging.example  .env.security.example  .gitignore  ANALISIS_FLUJO_FORMULARIO.md  DOCKER_COMPOSE_SECURITY.md  FASE5.2_IMPLEMENTATION_SUMMARY.md  FASE5_README.md  FLUJO_COMPLETO.md  HTTP_INTEGRATION_GUIDE.md  Pruebas de prompts.md  README.md  README1.md  SECURITY_PATCHES_FASE5.md  docker-compose.messaging.override.yml  docker-compose.messaging.yml  docker-compose.yml  docker-compose.yml.backup.20251208_130233  docker-compose.yml.backup.20251208_131457  docker-compose.yml.backup.20251208_132404  docker-compose.yml.backup.20251208_135201  docker-compose.yml.backup.20251208_140416  fix_docker_build.sh  index.html  init_db.sql  init_security.bat  install_fase5.bat  install_fase5.sh  license.txt  migration_fase4.sql  package-lock.json  package.json  requirements.txt  requirements_messaging.txt  setup_security_keys.sh  start.bat  start_services.bat  tailwind.config.js  test_brain.py  test_chaos_monkey.py  test_factory.py  (+2 more)
microservice_visual/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
microservice_visual/adapters/: controlnet_client.py  diffusion_client.py  storage_client.py
microservice_visual/api/: __init__.py  routes.py
microservice_visual/configuration/: settings.py
microservice_visual/core/: __init__.py  compliance_bridge.py  interfaces.py  pipeline.py
microservice_visual/nodes/: __init__.py  background_node.py  composition_node.py  forensic_node.py  input_node.py  (+2 more)
shared_lib/: README.md  pyproject.toml  test_contracts.py
(+527 files in other folders)
